<resources>
    <string name="app_name">buddy</string>
    <string name="getimage_btn">이미지불러오기</string>
    <string name="signup_textView3">이름</string>
    <string name="calresult_text1">원씩</string>
    <string name="plan_location">장소</string>
    <string name="plan_photo">사진</string>
    <string name="plan_image">이미지</string>
    <string name="plan_get">불러오기</string>
    <string name="plan_getimages">이미지 불러오기</string>
    <string name="plan_memo">글</string>
    <string name="cal_edit_text">인원수를 입력하세요</string>
    <string name="cal_text_02">명</string>
    <string name="cal_edit_text_02">정산할 금액을 입력하세요</string>
    <string name="cal_won">원</string>
    <string name="cal_button_text_01">정산하기</string>
    <string name="cal_result_text">계산 결과</string>
    <string name="cal_result_text_02">송금해 주세요</string>
    <string name="friend_list_text">친구 목록</string>
    <string name="text_management">관리</string>
    <string name="text_search">검색</string>
    <string name="text_friend_request">친구 신청</string>
    <string name="text_email">email을 입력하세요</string>
    <string name="text_language_setting">언어 설정</string>
    <string name="text_korean">한글</string>
    <string name="text_english">영어</string>
    <string name="text_name">이름</string>
    <string name="text_phone_number">전화번호</string>
    <string name="text_password">비밀번호</string>
    <string name="text_modify">수정</string>
    <string name="text_language">언어</string>
    <string name="text_font">글꼴</string>
    <string name="text_current_password">현재 비밀번호</string>
    <string name="text_password_to_change">변경할 비밀번호</string>
    <string name="text_change">변경</string>
    <string name="text_login">로그인</string>
    <string name="text_signup">회원가입</string>
    <string name="text_id">아이디</string>
    <string name="text_privacy_01">개인정보 수집 동의</string>
    <string name="text_privacy_02">GPS 수신 동의</string>
    <string name="text_privacy_03">푸쉬 알람 수신 동의</string>
    <string name="text_darkmode_setting">다크모드 설정</string>
    <string name="text_lightmode">라이트모드</string>
    <string name="text_darkmode">다크모드</string>
    <string name="put_text_memo">메모할 내용을 입력하세요.</string>
    <string name="text_email_">이메일</string>
    <string name="text_friendship">친밀도</string>
    <string name="text_check">확인</string>
    <string name="text_search_place">장소를 검색하세요</string>
</resources>
