<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center_horizontal">

            <TableRow android:layout_marginBottom="40dp">

                <EditText
                    android:id="@+id/divisor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cal_edit_text"
                    android:inputType="number" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_text_02"
                    android:textColor="#000"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:paddingLeft="20dp" />

            </TableRow>
            <TableRow>

                <EditText
                    android:id="@+id/dividend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cal_edit_text_02"
                    android:inputType="number" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_won"
                    android:textSize="25dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:paddingLeft="20dp" />

            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/cal_button_text_01"
            android:textSize="20dp"
            android:textColor="#000000"
            android:backgroundTint="#03A9F4"
            android:onClick="onBtnResult"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="400dp" />

    </FrameLayout>


</LinearLayout>
