<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <TableRow>

                <EditText
                    android:id="@+id/searchEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress" />
                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/text_search"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:backgroundTint="#03A9F4" />

            </TableRow>

            <TableRow android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/showEmail"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/requestBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/text_friend_request"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:backgroundTint="#03A9F4"
                    android:visibility="invisible" />

            </TableRow>

        </TableLayout>

    </FrameLayout>


</LinearLayout>