<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="130dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_current_password"
                    android:textSize="25dp"
                    android:paddingBottom="30dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/nowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null"
                    android:textSize="25dp"
                    android:paddingBottom="30dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password_to_change"
                    android:textSize="25dp"
                    android:paddingBottom="30dp"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/changePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Input password"
                    android:textSize="25dp"
                    android:paddingBottom="30dp"/>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/modifyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_change"
            android:backgroundTint="#03A9F4" />

    </FrameLayout>

</LinearLayout>