<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="46dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/put_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:hint="Input Text here"
            android:layout_weight="1"
            android:privateImeOptions="defaultInputmode=korean"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="80dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_number"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="155dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/put_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_weight="1"
            android:hint="Input Text Here"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="198dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email_"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="281dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/put_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="Input Text here"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="343dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="42dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/put_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Input Text here"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="454dp" />


        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_privacy_01"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="532dp"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_privacy_02"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="580dp"
            tools:ignore="MissingConstraints" />

        <!--주석
        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="푸쉬 알림 수신 동의"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="628dp" />
        -->

        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:backgroundTint="#03A9F4"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="673dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/submit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:backgroundTint="#03A9F4"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="268dp"
            tools:layout_editor_absoluteY="670dp" />


    </LinearLayout>

</LinearLayout>
