<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/friend_list_text"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <!-- 주석
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="("
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/friendNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="0"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text=")"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>
            -->

        <Button
            android:id="@+id/manageBtn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:text="@string/text_management"
            android:backgroundTint="#03A9F4"
            android:onClick="onManageBtn" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="12sp"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:text="@string/text_search"
            android:backgroundTint="#03A9F4"
            android:onClick="onSearchBtn"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>