<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="@string/text_name"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/nameInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

            </TableRow>
            <TableRow
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="@string/text_email_"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/emailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email_"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

            </TableRow>
            <TableRow
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="@string/text_friendship"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/firstHeart"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_favorite_empty"/>

                    <ImageView
                        android:id="@+id/secondHeart"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_favorite_empty"/>

                    <ImageView
                        android:id="@+id/thirdHeart"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_favorite_empty"/>

                </LinearLayout>

            </TableRow>
        </TableLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/deleteDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_check"
        android:background="@color/black"
        android:textSize="15sp"
        android:textColor="#FFF"
        android:textStyle="bold"/>


</androidx.appcompat.widget.LinearLayoutCompat>